--- a/web-developer.html
+++ b/web-developer.html
@@ -104,11 +104,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/silver-peak/job/o45rafwu'>Silver Peak Systems Careers - Senior Web Applications Developer - Bangalore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/silver-peak/job/o45rafwu'>Silver Peak Systems Careers - Senior Web Applications Developer - Bangalore</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/silver-peak/job/on2zafwS'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/silver-peak/job/on2zafwS'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -182,7 +182,7 @@ published: 19.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of Web Application Developer (PHP, JS) at ADVFN.</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/ncgoak5u1ds8nnzkmiobfmb39r'>Certified Microsoft .NET web Developer II (16119) | Sundial Software Career Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/ncgoak5u1ds8nnzkmiobfmb39r'>Certified Microsoft .NET web Developer II (16119) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -224,7 +224,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/vZh66VBWxZ/Python-Web-Developer'>Python web developer - Pitchup.com - Career Page</a></h5> 
+<h5><a href='http://pitchup.applytojob.com/apply/vZh66VBWxZ/Python-Web-Developer'>Python web developer - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -276,7 +276,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/stars-group/job/oG9yafwh'>The Stars Group Careers - Junior Front End Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/stars-group/job/oG9yafwh'>The Stars Group Careers - Junior Front End Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The role: Junior Front End Web Developer. We are looking for a Junior Front End 
 Web Developer to join our busy and dynamic team based in our Dublin service?...</p>
@@ -441,7 +441,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='http://testpros.applytojob.com/apply/6DDbWCCpQ0/Web-Developer'>Web Developer - TestPros - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://testpros.applytojob.com/apply/6DDbWCCpQ0/Web-Developer'>Web Developer - TestPros - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -459,7 +459,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light">Arlington, VAArlington, VA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AvanceonLimited/743999686208821--net-webform-developer'>Avanceon Limited .Net Webform Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AvanceonLimited/743999686208821--net-webform-developer'>Avanceon Limited .Net Webform Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -467,7 +467,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-16</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
